# pirate-garmin

./: .gitignore  README.md  pyproject.toml
docs/: browser-login-plan.md  data-mapping.md
src/pirate_garmin/: auth.py  browser_login.py  cli.py  client.py  endpoints.py
tests/: test_auth.py  test_browser_login.py  test_endpoints.py
