[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "pirate-garmin"
version = "0.1.0"
description = "Thin Garmin Connect CLI built around Garmin's native Android auth flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "typer>=0.24.1",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.58.0",
]
dev = [
  "pytest>=9.0.2",
  "pytest-httpx>=0.36.0",
  "ruff>=0.15.8",
]

[project.scripts]
pirate-garmin = "pirate_garmin.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
